[gd_scene load_steps=12 format=3 uid="uid://co681qg3ov2gi"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_g3hr7"]
[ext_resource type="Texture2D" uid="uid://bniwqqx8vqifw" path="res://Start.png" id="2_p40c1"]
[ext_resource type="Texture2D" uid="uid://e5cqtpf0m4au" path="res://1.png" id="2_x1g0f"]
[ext_resource type="Texture2D" uid="uid://dcota6xmesblf" path="res://Suika Game.png" id="3_3vjpe"]
[ext_resource type="FontFile" uid="uid://brt2nxcvqy3e5" path="res://ALGER.TTF" id="4_hpdad"]
[ext_resource type="Texture2D" uid="uid://d0ay87ccdchh6" path="res://Untitled design.png" id="6_6hcnx"]
[ext_resource type="AudioStream" uid="uid://cnooxa4o6jvr1" path="res://Sakura-Girl-Peach-chosic.com_.mp3" id="7_lp0x2"]

[sub_resource type="InputEventAction" id="InputEventAction_3ahh5"]
action = &"start_shortcut"

[sub_resource type="Shortcut" id="Shortcut_562yr"]
events = [SubResource("InputEventAction_3ahh5")]

[sub_resource type="InputEventAction" id="InputEventAction_2tr5v"]
action = &"start_shortcut"

[sub_resource type="Shortcut" id="Shortcut_ucqna"]
events = [SubResource("InputEventAction_2tr5v")]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_g3hr7")

[node name="MainMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 1919.0
offset_bottom = 1079.0
metadata/_edit_lock_ = true

[node name="GameStart" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = 49.0
offset_right = 53.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_562yr")
text = "START"

[node name="MainText" type="Label" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -95.0
offset_right = 121.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "SUIKA GAME
"

[node name="Subtext" type="Label" parent="MainMenu/MainText"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.291
anchor_right = 0.506
anchor_bottom = 0.291
offset_left = -40.0
offset_top = 63.995
offset_right = 41.56
offset_bottom = 86.995
grow_horizontal = 2
text = "but better!"

[node name="Button" type="Button" parent="MainMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="GameStart2" type="TextureButton" parent="MainMenu"]
z_index = 3
layout_mode = 0
offset_left = 771.0
offset_top = 525.0
offset_right = 1141.0
offset_bottom = 663.0
shortcut = SubResource("Shortcut_ucqna")
texture_normal = ExtResource("2_p40c1")
stretch_mode = 0

[node name="Endgame" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="GameStart" type="Button" parent="Endgame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -997.0
offset_top = -551.0
offset_right = 983.0
offset_bottom = 537.0
grow_horizontal = 2
grow_vertical = 2
text = "START"
icon = ExtResource("3_3vjpe")

[node name="MainText" type="Label" parent="Endgame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -237.0
offset_right = 161.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "YOU LOSE
"

[node name="Subtext" type="Label" parent="Endgame/MainText"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.291
anchor_right = 0.506
anchor_bottom = 0.291
offset_left = -40.0
offset_top = 63.995
offset_right = 41.56
offset_bottom = 86.995
grow_horizontal = 2
text = "Try Again?"

[node name="Countdown" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="GameStart" type="Label" parent="Countdown"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -55.0
offset_right = 23.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80

[node name="GameStartTimer" type="Timer" parent="Countdown"]
wait_time = 3.0
one_shot = true

[node name="HUD" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 408.0
offset_top = 997.0
offset_right = 2328.0
offset_bottom = 2077.0

[node name="Score" type="Label" parent="HUD"]
z_index = 8
layout_mode = 0
offset_left = 1062.0
offset_top = -793.0
offset_right = 1206.0
offset_bottom = -697.0
theme_override_fonts/font = ExtResource("4_hpdad")
theme_override_font_sizes/font_size = 70
text = "0"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="HUD/Score"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.642
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 82.0
offset_right = 61.552
offset_bottom = 104.5
theme_override_fonts/font = ExtResource("4_hpdad")
theme_override_font_sizes/font_size = 50
text = "SCORE"

[node name="BackgroundImage" type="Sprite2D" parent="."]
visible = false
position = Vector2(959, 539)
texture = ExtResource("2_x1g0f")
metadata/_edit_lock_ = true

[node name="UntitledDesign" type="Sprite2D" parent="."]
position = Vector2(1381, 639)
scale = Vector2(0.4, 0.328)
texture = ExtResource("6_6hcnx")

[node name="GameMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_lp0x2")
volume_db = 5.0

[connection signal="pressed" from="MainMenu/GameStart2" to="." method="_on_game_start_2_pressed"]
[connection signal="pressed" from="Endgame/GameStart" to="." method="_on_game_start_pressed"]
[connection signal="timeout" from="Countdown/GameStartTimer" to="." method="_on_game_start_timer_timeout"]
